NEW IN VERSION 1.4

- Add "defer" command
- Remove start-time editing from "edit" command
- Bug fix : bad path expression with postpone used to segfault
- Bug fix : completion always matched on 3 characters of command instead
  of per-command length (broke completion for 'ls')

NEW IN VERSION 1.3.1

- Bug fix : widen without doing narrow first segfaults
- Spec file fix for mandir
- Updated manpage

NEW IN VERSION 1.3

- Added "save" command
- Added "delete", "ls" and "revert" commands.
- Added "narrow" and "widen" commands
- Improvements to tdl.spec (e.g. so that SRPM construction works properly).

NEW IN VERSION 1.2

- Fix bug : priority with no args core dumped.

- Bring tdl.1 manpage up to date with texinfo.

- Give option to use ncurses instead of termcap in Makefile.

NEW IN VERSION 1.1

- Add 'interactive' mode to complement command line mode of v1.0.  If built
  with GNU realine, the new mode has better help, completion facilities etc.

- Add postpone and (re-)open commands (long-term deferral of tasks)

- Add clone and copyto commands (deep copy parts of the tree)

- For 'report', enclose text for parent entries in [[,]] brackets if the parent
  it not itself 'done'.

- Extensions to 'list' command:
  * single digit options to set max depth of entries that are shown
  * substring search for text in entries
  * -p option to show postponed & deferred entries

- Fix various memory leaks

- Main documentation now supplied in texinfo format.  Manpage is not maintained
  any longer.

- Revamp of internal help system

- Various bug fixes

- Update contact details

NEW IN VERSION 1.0

- Fix: don't complain if the links tdla, tdll etc already exist when installing.

- Add -q option to suppress "no database" warning.

- Fix: initialise 'parent' properly when creating nodes

- Allow dates to be specified for 'add' and 'done'.  'list' ignores entries
  added 'in the future', except with -a.  Extend 'edit' command to allow start
  date/time to be modified.
